<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrainingActivity">

    <Button
        android:id="@+id/btn_training_new"
        android:layout_width="300dp"
        android:layout_height="wrap_content"

        android:text="@string/text_contest_new"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_training_list"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_contest_exist"
        app:layout_constraintEnd_toEndOf="@+id/btn_training_new"
        app:layout_constraintStart_toStartOf="@+id/btn_training_new"
        app:layout_constraintTop_toBottomOf="@+id/btn_training_new" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toEndOf="@+id/btn_training_list"
        app:layout_constraintStart_toStartOf="@+id/btn_training_list"
        app:layout_constraintTop_toBottomOf="@+id/btn_training_list" />
</androidx.constraintlayout.widget.ConstraintLayout>